# delays

./: .gitignore  README.md  pyproject.toml
expl/: exploration.ipynb  exploration.py
src/delays/defs/: __init__.py  assets.py  resources.py  trips.py
src/delays/trips/: dbt_project.yml
src/delays/trips/models/staging/: stg_route_stops.sql  stg_stop_time_updates.sql  stg_stops.sql  stg_trips.sql
tests/: test_trains.py
