[project]
name = "delays"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster-dbt>=0.28.8",
    "dagster==1.12.8",
    "duckdb>=1.4.3",
    "nyct-gtfs>=2.1.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "dbt-duckdb>=1.10.0",
    "dbt-core>=1.8.8",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "delays"
registry_modules = [
    "delays.components.*",
]


